mirror/ex1/myapp_v1_internal_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
      version: v1
      color: blue
  template: 
    metadata:
      labels:
        app: myapp
        version: v1
        color: blue
    spec:
      containers:
      - name: v1
        image: docker.io/giriraj789/blue:v1
        ports:
        - containerPort: 8080
          name: http-myapp-v1
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  selector:
    app: myapp
  ports:
    - name: http-myapp-v1
      protocol: TCP
      port: 8181
      targetPort: 8080
