mirror/ex1/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapp-vs
spec:
  hosts:
    - myapp.myapp.svc.cluster.local
  http:
  - route:
    - destination:
        host: myapp.myapp.svc.cluster.local
        port:
          number: 8181
      weight: 100
    mirror:
      host: ec2-15-207-229-119.ap-south-1.compute.amazonaws.com
      port:
        number: 8181
    mirrorPercentage:
      value: 100.0
